# vs-view

./: .gitignore  .gitmodules  pyproject.toml  zensical.toml
.github/: renovate.json
.github/workflows/: cd-build-pyapp.yml  cd-build-python.yml  cd-build-vspackrgb.yml  cd-build-vsview-cli.yml  cd-plugin-propose-releases.yml  cd-plugin-publish-release.yml  cd-publish-native.yml  ci-docs.yml  ci-lint.yml  ci-test.yml  ci-update-submodules.yml  pypipublish.yml
docs/: contributing.md  index.md  installation.md  packaging.md
docs/api/developer/: index.md
docs/plugins/: second-party.md
docs/usage/workspaces/: index.md
packaging/: build_exe.py  vsview.spec
src/plugins/comp/: pyproject.toml
src/plugins/fftspectrum/: pyproject.toml
src/plugins/frameprops-extended/: pyproject.toml
src/pyapp/: .env.example  install.sh  pyproject.toml
src/pyapp/src/vsview_pyapp/: cli.py
src/vsview/: cli.py
src/vsview-cli/: README.md  pyproject.toml
src/vsview-cli/rust/: Cargo.toml
src/vsview/api/: __init__.py  output.py
src/vsview/app/: main.py  packing.py
src/vsview/app/outputs/: __init__.py  audio.py  manager.py  video.py
src/vsview/app/plugins/: api.py
src/vsview/app/settings/: README.md  __init__.py  action.py  metadata.py  models.py  shortcuts.py  widgets.py
src/vsview/app/tools/colorpicker/: plugin.py
src/vsview/app/tools/frameprops/: formatters.py  plugin.py
src/vsview/app/views/: components.py  video.py
src/vsview/app/workspace/: file.py  loader.py  playback.py  quick_script.py  tab_manager.py
stubs/vapoursynth/: __init__.pyi
