
[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project]
name = "vsview-pyapp"
version = "0.1.0"
authors = [{ name = "Ichunjo", email = "ichunjo.le.terrible@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["python-dotenv>=1.2.2", "rich-click>=1.8.6", "jetpytools"]

[project.scripts]
vsapp = "vsview_pyapp.cli:vsapp"
