[build-system]
requires = ["hatchling", "versioningit", "hatch-sbom[uv]>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "vsview-comp"
dynamic = ["version"]
description = "A vsview plugin to make comparison backed by Slowpoke Pics"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Jimbo", email = "17926797+Kapppa@users.noreply.github.com" },
    { name = "Vardë", email = "ichunjo.le.terrible@gmail.com" },
]
maintainers = [
    { name = "Vardë", email = "ichunjo.le.terrible@gmail.com" },
    { name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "vsview[secrets]>=0.4.0",
    "vsjetpack>=1.0.0",
    "anyio>=4.12.1",
    "pathvalidate>=3.3.1",
    "jinja2>=3.1.6",
    "niquests>=3.18.2",
]

[project.optional-dependencies]
vsfpng = ["vsfpng>=1.2"]

[project.entry-points.vsview]
vsview_comp = "vsview_comp"

[project.urls]
"Documentation" = "https://jaded-encoding-thaumaturgy.github.io/vs-view/plugins/second-party/#comparison"
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/tree/main/src/plugins/comp"
"Bug Tracker" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/issues"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[tool.hatch.build.targets.wheel.hooks.sbom]
source = "uv"

[tool.hatch.build.targets.wheel.hooks.sbom.uv]
no-dev = true
frozen = false
no-sources = true

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
match = ["comp/v*"]
default-tag = "comp/v0.0.0"

[tool.versioningit.tag2version]
rmprefix = "comp/v"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{next_version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.uv.sources]
vsview = { workspace = true }
